undo changes related to immutable lists