@@ -24,6 +24,7 @@ import de.uftos.repositories.database.ConstraintSignatureRepository;
 import de.uftos.repositories.database.ServerRepository;
 import de.uftos.repositories.database.StudentGroupRepository;
 import de.uftos.repositories.database.StudentRepository;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -66,7 +67,9 @@ public class StudentServiceTest {
     Tag tag = new Tag("", "tagName");
     tag.setId("tagId");
 
-    StudentGroup group = new StudentGroup("group", List.of("123"), List.of(), List.of());
+    StudentGroup group =
+        new StudentGroup("group", new ArrayList<>(List.of("123")), Collections.emptyList(),
+            Collections.emptyList());
     group.setId("groupId");
 
     Lesson lesson =
@@ -78,26 +81,29 @@ public class StudentServiceTest {
         new Lesson(0, "teacherId", "groupId", "roomId", "timeslotId", "subjectId", "timetableId",
             "1865");
     lessonWrongYear.setStudentGroup(groupMock);
-    group.setLessons(List.of(lesson, lessonWrongYear));
+    group.setLessons(new ArrayList<>(List.of(lesson, lessonWrongYear)));
 
-    Student student = new Student("123", "Max", "Mustermann", List.of(groupMock), List.of(tag));
+    Student student = new Student("123", "Max", "Mustermann", new ArrayList<>(List.of(groupMock)),
+        new ArrayList<>(List.of(tag)));
 
-    when(groupMock.getGrades()).thenReturn(List.of());
-    when(groupMock.getLessons()).thenReturn(List.of(lesson, lessonWrongYear));
-    when(groupMock.getStudents()).thenReturn(List.of(student));
+    when(groupMock.getGrades()).thenReturn(Collections.emptyList());
+    when(groupMock.getLessons()).thenReturn(new ArrayList<>(List.of(lesson, lessonWrongYear)));
+    when(groupMock.getStudents()).thenReturn(new ArrayList<>(List.of(student)));
     when(groupMock.getId()).thenReturn("groupId");
     Server server = new Server(null, "2024", "email");
-    when(serverRepository.findAll()).thenReturn(List.of(server));
-    when(studentRepository.findAll()).thenReturn(List.of(student));
+    when(serverRepository.findAll()).thenReturn(new ArrayList<>(List.of(server)));
+    when(studentRepository.findAll()).thenReturn(new ArrayList<>(List.of(student)));
     when(studentRepository.findById("123")).thenReturn(Optional.of(student));
-    when(studentRepository.findAllById(List.of("123"))).thenReturn(List.of(student));
+    when(studentRepository.findAllById(new ArrayList<>(List.of("123")))).thenReturn(
+        new ArrayList<>(List.of(student)));
     when(studentRepository.findAllById(List.of("nonExistentId", "123"))).thenReturn(
-        List.of(student));
+        new ArrayList<>(List.of(student)));
     when(constraintSignatureRepository.findAll(any(Specification.class))).thenReturn(
         Collections.emptyList());
     when(studentGroupRepository.findByStudents(any(Student.class))).thenReturn(
         Collections.emptyList());
-    when(studentGroupRepository.findAll(any(Specification.class))).thenReturn(List.of(groupMock));
+    when(studentGroupRepository.findAll(any(Specification.class))).thenReturn(
+        new ArrayList<>(List.of(groupMock)));
     when(studentRepository.save(any(Student.class))).thenReturn(student);
   }
 
@@ -123,7 +129,7 @@ public class StudentServiceTest {
   @Test
   void createStudent() {
     StudentRequestDto requestDto =
-        new StudentRequestDto("Max", "Mustermann", List.of("tagId"));
+        new StudentRequestDto("Max", "Mustermann", new ArrayList<>(List.of("tagId")));
     studentService.create(requestDto);
 
     ArgumentCaptor<Student> studentCap = ArgumentCaptor.forClass(Student.class);
@@ -142,7 +148,7 @@ public class StudentServiceTest {
   @Test
   void createEmptyFirstNameStudent() {
     StudentRequestDto requestDto = new StudentRequestDto("", "Mustermann",
-        List.of());
+        Collections.emptyList());
     assertThrows(ResponseStatusException.class,
         () -> studentService.create(requestDto));
   }
@@ -150,7 +156,7 @@ public class StudentServiceTest {
   @Test
   void createEmptyLastNameStudent() {
     StudentRequestDto requestDto = new StudentRequestDto("Max", "",
-        List.of());
+        Collections.emptyList());
     assertThrows(ResponseStatusException.class,
         () -> studentService.create(requestDto));
   }
@@ -159,7 +165,7 @@ public class StudentServiceTest {
   void updateStudent() {
     StudentRequestDto requestDto =
         new StudentRequestDto("newFirstName", "newLastName",
-            List.of());
+            Collections.emptyList());
     studentService.update("123", requestDto);
 
     ArgumentCaptor<Student> studentCap = ArgumentCaptor.forClass(Student.class);
@@ -177,7 +183,7 @@ public class StudentServiceTest {
   @Test
   void updateEmptyFirstNameStudent() {
     StudentRequestDto requestDto = new StudentRequestDto("", "Mustermann",
-        List.of());
+        Collections.emptyList());
     assertThrows(ResponseStatusException.class,
         () -> studentService.update("123", requestDto));
   }
@@ -185,7 +191,7 @@ public class StudentServiceTest {
   @Test
   void updateEmptyLastNameStudent() {
     StudentRequestDto requestDto = new StudentRequestDto("Max", "",
-        List.of());
+        Collections.emptyList());
     assertThrows(ResponseStatusException.class,
         () -> studentService.update("123", requestDto));
   }
